@@ -1,18 +1,18 @@
 # Albumirekisteri
 
-Albumirekisteri on Java-sovellus, jonka tein opinnoissa. Sen avulla käyttäjä voi hallita musiikkialbumeita ja pitää yllä omaa albumirekisteriä.
+Albumirekisteri on Java-sovellus, jonka tein opinnoissa. Sen avulla käyttäjä voi hallita musiikkialbumeita ja ylläpitää omaa albumirekisteriä.
 
 ## Kuvaus
 - Sovelluksessa voi **luoda käyttäjätilin** ja kirjautua sisään.  
-- Käyttäjä voi **lisätä albumeita**, tarkastella niitä ja ylläpitää omaa **muistilistaa / rekisteriä**.  
-- Sovellus on toteutettu Javalla **JavaFX-käyttöliittymällä**, joten graafinen käyttöliittymä on osa sovellusta.
+- Käyttäjä voi **lisätä albumeita**, tarkastella niitä ja ylläpitää omaa **muistilistaa / rekisteriä**.
+- Sovellus on toteutettu Javalla ja käyttäen JavaFX-kirjastoa.
 
 ## Vaatimukset
 - Java JDK (versio 11 tai uudempi)  
-- JavaFX-kirjasto (saatavilla erikseen tai osana JDK:ta, riippuen versiosta)  
-- IDE, kuten IntelliJ IDEA, Eclipse tai NetBeans, jossa JavaFX tuettu  
+- JavaFX-kirjasto 
 
-## Käyttöohjeet
-1. Rekisteröidy tai kirjaudu olemassa olevalla käyttäjätunnuksella.  
-2. Lisää uusia albumeita ja tarkastele tallennettuja albumeita.  
-3. Hallinnoi omaa albumirekisteriäsi graafisen käyttöliittymän kautta.  
+## Asennus ja ajaminen
+> Suoritettava `.jar`-tiedoston ajaminen onnistuu komennolla (JavaFX-kirjastopolut määritelty):
+> ```bash
+> java --module-path /polku/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml -jar Albumirekisteri.jar
+> ```
